# Baby_shop_dashboard

./: Makefile  README.md  pyproject.toml  requirements.txt
Nila_baby_shop/: __init__.py  config.py  dashboard_app.py  dataset.py  features.py  plots.py
Nila_baby_shop/modeling/: demand_forecast.py  predict.py  predict_demand.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: demand_forecast_model.pkl
